k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      type: db
  template:
    metadata:
      labels:
        app: demo-app
        type: db
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: postgres-data
          ports:
            - containerPort: 5432
      volumes:
        - name: postgres-data
          hostPath:
            path: /var/lib/postgres/data
