k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
    type: admin
  ports:
    - port: 9101
      targetPort: 9101
