k8s/biz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biz
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
    type: biz
  ports:
    - port: 9001
      targetPort: 9001
