k8s/news-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
    type: news
  ports:
    - port: 9201
      targetPort: 9201
