k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
    type: db
  ports:
    - port: 5432
      targetPort: 5432
