k8s/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/app-root: /ui
spec:
  rules:
    - host: admin.demo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 9101
