k8s/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/app-root: /ui
spec:
  rules:
    - host: demo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 9301
    - host: admin.demo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 9101
    - host: news.demo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: news
                port:
                  number: 9201
